- Fix MDEV-6988 and MDEV-6994 modified:   storage/connect/ha_connect.cc